<resources>
    <string name="app_name">CoroutinesPlayground</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job">Job</string>
    <string name="start">Start</string>
    <string name="sum1">Sum1</string>
    <string name="sum2">Sum2</string>
    <string name="sum3">Sum3</string>
    <string name="deferred">Deferred</string>
    <string name="toast_sum">Sum is equal to</string>
    <string name="with_context">withContext</string>
    <string name="name_parameter_p">p</string>
    <string name="name_parameter_q">q</string>
    <string name="calculate">Calculate</string>
    <string name="error_invalid_number">Invalid number(s)</string>
    <string name="error_null_or_empty_number">At least one of numbers is null or empty</string>
    <string name="input_n">n</string>
    <string name="error_n">n can not be negative</string>
    <string name="example_3_flow">example 3 (flow)</string>
    <string name="add_string">Add string</string>
    <string name="string">String</string>
    <string name="count">Count</string>
    <string name="get_count">Get count</string>
    <string name="next_page">Next page</string>
    <string name="input_string_to_get_count">String to get count</string>
    <string name="delete_string">Delete string</string>
    <string name="previous_page">Previous page</string>
    <string name="example_3_with_dependency_injection">example 3 with dependency injection</string>
</resources>