<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".flow.example3.presentation.Example3Next">

    <EditText
        android:id="@+id/editDeleteString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/string"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@id/editCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDeleteString"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delete_string"
        app:layout_constraintTop_toBottomOf="@id/editDeleteString"
        app:layout_constraintStart_toStartOf="@id/editDeleteString"
        app:layout_constraintEnd_toEndOf="@id/editDeleteString" />

    <EditText
        android:id="@+id/editCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:hint="@string/input_string_to_get_count"
        app:layout_constraintBottom_toBottomOf="@id/editDeleteString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editDeleteString"
        app:layout_constraintTop_toTopOf="@id/editDeleteString" />

    <TextView
        android:id="@+id/textCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="Count of str is equal to 5"
        app:layout_constraintTop_toBottomOf="@id/editCount"
        app:layout_constraintStart_toStartOf="@id/editCount"
        app:layout_constraintEnd_toEndOf="@id/editCount" />

    <Button
        android:id="@+id/getCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_count"
        app:layout_constraintTop_toBottomOf="@id/textCount"
        app:layout_constraintEnd_toEndOf="@id/editCount"
        app:layout_constraintStart_toStartOf="@id/editCount" />

    <Button
        android:id="@+id/previousPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/previous_page"
        app:layout_constraintTop_toBottomOf="@id/getCount"
        app:layout_constraintEnd_toEndOf="@id/editCount"
        app:layout_constraintStart_toStartOf="@id/editDeleteString" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/previousPage"
        app:layout_constraintStart_toStartOf="@id/previousPage"
        app:layout_constraintEnd_toEndOf="@id/previousPage"
        app:layout_constraintBottom_toBottomOf="parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/strings"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            tools:text="String" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>